@@ -4,6 +4,7 @@ Version 0.7.0
 * Support timezones on the last modified PO header. Thanks @jmoiron (Issue #43)
 * Actually move to the next block when submitting a lot of translations (Issue #13)
 * Add msgctxt to the entry hash to differentiate entries with context. Thanks @metalpriest (Issue #39)
+* Better discovery of locale files on Django 1.4+ Thanks @tijs (Issues #63, #64)
 
 Version 0.6.8
 -------------
